# CNN_ESP_FIRE

./: .gitignore  .gitmodules  README.md  classifier.py  cnn.ipynb  fire_classifier.py  fire_model_dynamic.tflite  fire_model_esp_q.tflite  fire_model_q.tflite  generate_non_fire.py  hand_model.tflite  model_fingers_int8.tflite  model_fire_a35_int8.tflite  model_fire_int8.tflite  model_teste.tflite  pyproject.toml  requirements.txt
Aplicativo/: CMakeLists.txt  main.cpp
Firmware/: idf_component.yml  sdkconfig
Firmware/main/: CMakeLists.txt  classifier.cpp  classifier.h  fire_model.h  idf_component.yml  main.cpp  server.cpp
esp/: CMakeLists.txt
esp/main/: CMakeLists.txt  idf_components.yml  image_provider.h
esp/simulation/: CMakeLists.txt
train/: config.py  model_fire_bright100epochs_int8.tflite  process_dataset.py  train.py
train/fire_data/test/labels/: 125_jpg.rf.f859b47470629e525728120b7f9f9fad.txt  132_jpg.rf.e27599473b12ca6f2e0d8cfc2946e531.txt  135_jpg.rf.317d455e19ea5d040c55f639be182812.txt  141_jpg.rf.9e938d57339c7d04288b847731db3dcd.txt  153_jpg.rf.f705c1d0f34da3c11632d9d4488110a5.txt  164_jpg.rf.77073f324759f87ad4d7545ed874b3aa.txt  169_jpg.rf.0f1ce06e272a33d1ce7d60eeecbde147.txt  180_jpg.rf.ca65196036f9d5fbe8d676b0d5bab7b6.txt  186_jpg.rf.23a8f2d78cc71db5bf7654b6d3860aef.txt  21_jpg.rf.30d538bc405b254b60a79988d23aeef2.txt  234_jpg.rf.34a5aaa7e096b61390b851530d5f39e3.txt  257_jpg.rf.437d19171d95b08b2bd6917be2c07f24.txt  282_jpg.rf.f90b2510d0e9090049e2721424a3cbd7.txt  285_jpg.rf.9e91acfd687b8cad8789d5c2aa65895a.txt  (+86 more)
utils/: gamma.py
(+8133 files in other folders)
